# telegram-image-search

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli_user_interface.rs  main.rs  telegram_client.rs  telegram_service.rs
src/cli_user_interface/: file_encryptor.rs
