[package]
name = "telegram-image-search"
version = "0.1.0"
edition = "2021"

[dependencies]
tesseract="0.15.1"
grammers-client = "0.7.0"
grammers-session = "0.7.0"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.25"}
env_logger = {version = "0.11.6"}
chrono = {version = "0.4.39"}
futures="0.3.31"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.9.0"
base64 = "0.22.1"
anyhow = "1.0.95"
serde =  { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
rpassword = "7.3.1"